# tensor_sim

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ampere_tensor.h  blackwell_tensor.h  custom_tensor.h  fp_utils.h  hopper_tensor.h  volta_tensor.h
results/: test_custom_e4m3_fp16.txt  test_custom_fp16_fp32_n4_w25_rtz.txt  test_custom_vs_blackwell.txt  test_fp16.fp16_Ampere.txt  test_fp16.fp16_Blackwell.txt  test_fp16.fp16_Volta.txt  test_fp16.fp4_e2m1_Blackwell.txt  test_fp16.fp8_e4m3_Hopper.txt  test_fp16.fp8_e5m2_Blackwell.txt  test_fp16.fp8_e5m2_Hopper.txt  test_fp32.bf16_Ampere.txt  test_fp32.bf16_Blackwell.txt  test_fp32.fp16_Ampere.txt  test_fp32.fp16_Volta.txt  test_fp32.fp4_e2m1_Blackwell.txt  test_fp32.fp4_e2m1_e8_Blackwell.txt  test_fp32.fp4_e2m1_ue4m3_Blackwell.txt  test_fp32.fp8_e4m3_Blackwell.txt  test_fp32.fp8_e4m3_Hopper.txt  test_fp32.fp8_e5m2_Blackwell.txt  test_fp32.fp8_e5m2_Hopper.txt
src/: ampere_tensor.cpp  blackwell_tensor.cpp  custom_tensor.cpp  hopper_tensor.cpp  volta_tensor.cpp
tests/: test_ampere.cpp  test_blackwell.cpp  test_custom.txt  test_fp16.fp16.txt  test_fp16.fp4_e2m1.txt  test_fp16.fp8_e4m3.txt  test_fp16.fp8_e5m2.txt  test_fp32.bf16.txt  test_fp32.fp16.txt  test_fp32.fp4_e2m1.txt  test_fp32.fp4_e2m1_e8.txt  test_fp32.fp4_e2m1_ue4m3.txt  test_fp32.fp8_e4m3.txt  test_fp32.fp8_e5m2.txt  test_hopper.cpp  test_volta.cpp
